<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/animeInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/field_title"
                    android:textFontWeight="600"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/animeInfoImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="Anime Image"
                    app:srcCompat="@drawable/ic_launcher_background"/>

                <RatingBar
                    android:id="@+id/animeInfoRaiting"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:progressTint="#FFED4C"
                    android:stepSize="0.1" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/animeInfoOriginalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/field_original_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/animeInfoOriginalTitleRomanised"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/field_original_title_romanised"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/animeInfoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/field_description"/>

                <TextView
                    android:id="@+id/animeInfoDirector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/field_director"/>

                <TextView
                    android:id="@+id/animeInfoProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="producer"/>

                <TextView
                    android:id="@+id/animeInfoReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/field_release_date"/>

                <TextView
                    android:id="@+id/animeInfoRunningTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:text="@string/field_running_time"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_margin="8dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/animeToggleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_500"
                android:minWidth="45dp"
                android:minHeight="45dp"
                android:textColor="@color/white"
                android:textOff="@string/action_add_to_fav"
                android:textOn="@string/action_remove_from_fav"
                android:textSize="18sp"
                app:cornerRadius="5dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>