<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/animeCardItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        app:cardMaxElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/animeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginVertical="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/field_title"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/animeOriginalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="6dp"
                android:fontFamily="sans-serif-medium"
                android:textFontWeight="400"
                android:text="@string/field_original_title"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/animeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/field_description"/>

            <TextView
                android:id="@+id/animeDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="bottom|end"
                android:text="@string/field_director"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewAnimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    app:icon="@drawable/eye"
                    app:iconGravity="start"
                    app:iconSize="30dp"
                    app:iconTint="@color/grey"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addAnimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    app:icon="@drawable/like"
                    android:layout_marginTop="2dp"
                    app:iconGravity="start"
                    app:iconSize="28dp"
                    app:iconTint="@color/grey"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>